# agentbox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  lefthook.yml
.agent-state/: features.json  progress.md
.github/workflows/: build-artifacts.yml  ci.yml  release.yml
artifacts/: Makefile
artifacts/guest-agent/: build.sh
artifacts/kernel/: build.sh  config-aarch64  config-x86_64
artifacts/rootfs/: build.sh
artifacts/rootfs/overlay/etc/init.d/: guest-agent
artifacts/snapshot/: bake.sh
artifacts/templates/: build-template.sh
artifacts/templates/node/: package.json  setup.sh
crates/agentbox-cli/: Cargo.toml
crates/agentbox-cli/src/: client.rs  main.rs  output.rs
crates/agentbox-cli/src/commands/: create.rs  destroy.rs  download.rs  exec.rs  get.rs  health.rs  list.rs  ls.rs  mod.rs  upload.rs
crates/agentbox-core/: Cargo.toml
crates/agentbox-core/src/: config.rs  error.rs  fc_api.rs  lib.rs  pool.rs  sandbox.rs  snapshot.rs  vm.rs  vsock.rs
crates/agentbox-daemon/: Cargo.toml
crates/agentbox-daemon/src/: handlers.rs  lib.rs  main.rs  metrics.rs  port_forward.rs  routes.rs  state.rs  ws.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: exec.rs  files.rs  main.rs  path_security.rs  port_forward.rs  protocol.rs  server.rs
crates/guest-agent/tests/: integration.rs
docs/: api.md  architecture.md  plan.md  spec.md
docs/designs/: build-pipeline.md  cli.md  daemon-http.md  guest-agent.md  install-ci.md  pool-sandbox.md  project-scaffold.md  python-sdk.md  vm-manager.md  vsock-client.md  websocket-exec.md
docs/plans/: 2026-03-28-network-pool-and-templates.md  2026-03-28-port-forwarding-design.md  2026-03-28-sdk-polish-design.md
scripts/: agentbox.service  install.sh  setup.sh  uninstall.sh
sdks/python/: README.md  pyproject.toml
sdks/python/agentbox/: __init__.py  async_client.py  async_sandbox.py  client.py  errors.py  exec_session.py  sandbox.py  tools.py  types.py
sdks/python/tests/: test_async_client.py  test_async_sandbox.py  test_client.py  test_errors.py  test_sandbox.py  test_tools.py  test_types.py
sdks/typescript/: package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  sandbox.ts  tools.ts  types.ts
sdks/typescript/tests/: sdk.test.js
