[workspace]
resolver = "2"
members = [
    "crates/agentbox-core",
    "crates/agentbox-daemon",
    "crates/agentbox-cli",
    "crates/guest-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fauzanazz/agentbox"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
