[package]
name = "agentbox-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentbox"
path = "src/main.rs"

[dependencies]
agentbox-core = { path = "../agentbox-core" }
agentbox-daemon = { path = "../agentbox-daemon" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
