[package]
name = "agentbox-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
