[package]
name = "agentbox-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
hyperlocal = "0.9"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
