[package]
name = "agentbox-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
agentbox-core = { path = "../agentbox-core" }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
base64 = "0.22"
