[package]
name = "agentbox-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
agentbox-core = { path = "../agentbox-core" }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.6"
anyhow = "1"
base64 = "0.22"
percent-encoding = "2"

[dev-dependencies]
tower = "0.5"
