[package]
name = "guest-agent"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { version = "0.29", features = ["process", "signal", "term", "fs"] }
base64 = "0.22"
uuid = { workspace = true }
