[project]
name = "agentbox"
version = "0.1.0"
description = "Self-hosted sandbox infrastructure for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
